ajustando footer para site no celular

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -49,14 +49,6 @@
                             et perferendis eaque, exercitationem praesentium nihil.
                         </p>
                     </div>
-                    <div class="px-6 pt-4 pb-2">
-                        <span
-                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#photography</span>
-                        <span
-                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
-                        <span
-                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
-                    </div>
                 </div>
 
                 <!--Card 2-->
@@ -68,14 +60,6 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, Nonea! Maiores
                             et perferendis eaque, exercitationem praesentium nihil.
                         </p>
-                    </div>
-                    <div class="px-6 pt-4 pb-2">
-                        <span
-                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#photography</span>
-                        <span
-                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
-                        <span
-                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#summer</span>
                     </div>
                 </div>
 
@@ -89,21 +73,15 @@
                             et perferendis eaque, exercitationem praesentium nihil.
                         </p>
                     </div>
-                    <div class="px-6 pt-4 pb-2">
-                        <span
-                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#photography</span>
-                        <span
-                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#travel</span>
-                        <span
-                            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#fall</span>
-                    </div>
                 </div>
 
             </div>
             <div class="relative mb-3">
-                <button class="absolute right-10 mukta_font text-2xl hover:text-zinc-100 hover:text-3xl">
-                    MORE POSTS
-                </button>
+                <a href="/blog">
+                    <button class="absolute right-10 mukta_font text-2xl hover:text-zinc-100 hover:text-3xl">
+                        MORE POSTS
+                    </button>
+                </a>
             </div>
         </section>
 
@@ -123,7 +101,7 @@
                     -webkit-transform: translateZ(0);
                 }
             </style>
-            <div class="flex space-x-6 mx-auto justify-center">
+            <div class="flex flex-col sm:flex-row space-x-6 mx-auto justify-center">
                 <!-- Development -->
                 <div>
                     <p class="service-num">1</p>
