--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -8,7 +8,11 @@
     <section class="my-10 px-12" id="post">
         <h2>Blog Post</h2>
         <h1>{{.PostTitle}}</h1>
-        {{.PostContent}}
+        {{.PostContent}}       
+    </section>
+    <!-- RELATED POSTS links -->
+    <section>
+
     </section>
 </body>
 
