--- a/web/templates/thanks.html
+++ b/web/templates/thanks.html
@@ -23,6 +23,11 @@
             <p class="text-center">
                 In the mean time, why don't you take a look at the blog ?
             </p>
+            <a href="/blog">
+                <button class="flex m-auto mukta_font text-2xl hover:text-zinc-100 hover:text-3xl">
+                    BLOG POSTS
+                </button>
+            </a>
         </section>
     </main>
     <!-- FOOTER -->
