--- a/web/templates/blog.html
+++ b/web/templates/blog.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-{{ template "meta.html" . }}
+{{ template "components/meta.html" . }}
 
 <body class="px-0 py-0 mx-0 my-0">
     <!-- HEADER -->
-    {{ template "header.html" . }}
+    {{ template "components/header.html" . }}
     <section class="my-10 px-12">
-        <h1>Blog Posts</h1>
+        <h1 class="text-2xl md:text-4xl mukta_font">Blog Posts</h1>
     </section>
 </body>
 
