--- a/web/templates/components/header.html
+++ b/web/templates/components/header.html
@@ -1,26 +1,17 @@
-{{if .MainHeader }}
 <header class="w-screen flex flex-row items-center p-1 justify-between bg-white shadow-xs">
-    <div id="logo-header" class="ml-6">
-        <object class="w-20" type="image/svg+xml" data="/public/images/logo.svg" alt="site logo">
-            <img src="/public/images/logo.png" alt="site logo">
-        </object>
+    <div id="logo-header" class="ml-6" href="/">  
+        <a href="/">
+            <img class="w-20" src="/public/images/logo.svg" alt="site logo">
+        </a>
     </div>
+    {{if .MainHeader }}
     <nav class="mx-8" id="options-header">
         <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl" href="#about"> ABOUT </a>
         <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl" href="#contact"> CONTACT </a>
     </nav>
-</header>
-{{else}}
-<header class="w-screen flex flex-row items-center p-1 justify-between bg-white shadow-xs">
-    <div id="logo-header" class="ml-6" href="/">
-        <object class="w-20" type="image/svg+xml" data="/public/images/logo.svg" alt="site logo">
-            <a href="/">
-            <img src="/public/images/logo.png" alt="site logo">
-            </a>    
-        </object>
-    </div>
+    {{else}}
     <nav class="mx-8" id="options-header">
         <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl" href="/"> HOME </a>
     </nav>
+    {{end}}
 </header>
-{{end}}
