--- a/web/templates/editor.html
+++ b/web/templates/editor.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{{ template "meta.html" . }}
+{{ template "components/meta.html" . }}
 
 <body class="px-0 py-0 mx-0 my-0">
     <style>
@@ -15,7 +15,7 @@
         }
     </style>
     <!-- HEADER -->
-    {{ template "header.html" . }}
+    {{ template "components/header.html" . }}
     <section class="my-10 px-12">
         <h1 class="text-4xl md:text-6xl mukta_font">
             Blog post editor
