--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-{{ template "meta.html" . }}
+    {{ template "components/meta.html" . }}
 
 <body class="px-0 py-0 mx-0 my-0">
     <!-- HEADER -->
-    {{ template "header.html" . }}
+    {{ template "components/header.html" . }}
     <section class="my-10 px-12" id="post">
         <h2>Blog Post</h2>
         <h1>{{.PostTitle}}</h1>
@@ -14,6 +14,8 @@
     <section>
 
     </section>
+    {{ template "components/footer.html" . }}
+
 </body>
 
 </html>
