--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    {{ template "components/meta.html" . }}
+{{ template "components/meta.html" . }}
 
 <body class="px-0 py-0 mx-0 my-0">
     <!-- HEADER -->
@@ -8,14 +8,21 @@
     <section class="my-10 px-12" id="post">
         <h2>Blog Post</h2>
         <h1>{{.PostTitle}}</h1>
-        {{.PostContent}}       
+        {{.PostContent}}
     </section>
     <!-- RELATED POSTS links -->
     <section>
 
     </section>
+    <!-- FOOTER -->
+    <style>
+        footer {
+            position: absolute;
+            bottom: 10px;
+            width: 100%;
+        }
+    </style>
     {{ template "components/footer.html" . }}
-
 </body>
 
 </html>
