some lesser important stuff

--- a/web/templates/components/footer.html
+++ b/web/templates/components/footer.html
@@ -18,5 +18,13 @@
         <p class="pl-2 sm:pl-0">
             afa7789 Computer Engineering Solutions Ltda @ 2021
         </p>
+        <div class="flex">
+            <a class="m-auto my-1  text-center" href="https://github.com/afa7789">
+                <img class="w-5 inline-block" type="image/svg+xml" src="/public/images/drawing_black.svg" alt="site logo">
+                this website is open sourced at github.
+            </a>
+        </div>
+
     </div>
+    
 </footer>
