post viewer changes made

--- a/web/templates/components/footer.html
+++ b/web/templates/components/footer.html
@@ -19,7 +19,7 @@
             afa7789 Computer Engineering Solutions Ltda @ 2021
         </p>
         <div class="flex">
-            <a class="m-auto my-1  text-center" href="https://github.com/afa7789">
+            <a class="m-auto my-1  text-center" href="https://github.com/afa7789/gofiber-website">
                 <img class="w-5 inline-block" type="image/svg+xml" src="/public/images/drawing_black.svg" alt="site logo">
                 this website is open sourced at github.
             </a>
