--- a/web/templates/missing.html
+++ b/web/templates/missing.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-{{ template "meta.html" . }}
+{{ template "components/meta.html" . }}
 
 <body class="px-0 py-0 mx-0 my-0">
     <!-- HEADER -->
-    {{ template "header.html" . }}
+    {{ template "components/header.html" . }}
     <section class="my-10 px-12" id="post">
         <!-- <h2>Blog Post</h2> -->
         <h1>There is no post at that id</h1>
