--- a/web/templates/failed.html
+++ b/web/templates/failed.html
@@ -7,7 +7,7 @@
     {{ template "components/header.html" . }}
     <main >
         <!-- Thanks -->
-        <section class="px-12 mt-2 sm:mt-10 md:mt-20">
+        <section class="my-2 px-12 pb-10 pt-2">
             <h3 class="text-xl text-zinc-500 text-center">We have received your contact!</h1>
             <h2 class="text-3xl text-zinc-700 text-center">
                 Try again but fill all the values
