okay blog system almost working 100%

--- a/web/templates/components/footer.html
+++ b/web/templates/components/footer.html
@@ -4,7 +4,7 @@
             <h4>Linkedin</h4>
         </a>
         <a href="https://afa7789.medium.com/">
-            <h4>BlogPosts</h4>
+            <h4>Medium</h4>
         </a>
         <a href="https://github.com/afa7789">
             <h4>Github</h4>
