--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -34,11 +34,35 @@
 
         <!-- BLOG -->
         <section class="pb-10 pt-4 bg-zinc-900 px-12 text-white">
-            <h1 class="text-xl sm:text-2xl md:text-4xl mukta_font ml-8">
+            <h1 class="mt-3 text-xl sm:text-2xl md:text-4xl mukta_font sm:ml-8">
                 Blog
             </h1>
-            <div class="px-10 py-5 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
+            <p class="italic mt-2 sm:pl-2  sm:ml-8">
+                Posts about technology, programming languages and more, if you want to read more about Arthur or his ideas, check up his <a class="underline text-blue-600
+                hover:text-zinc-700 
+                visited:text-zinc-400" href="https://afa7789.medium.com/">medium blog posts</a>. <br>
+            </p>
+            <div class="px-4 sm:px-10 py-5 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
+                {{ $length := len .LastPostsTitles }} {{ if eq $length 3 }}
 
+                    {{ $postimages := .LastPostsImages }}
+                    {{ $synp := .LastPostsSynopsies }}
+                    {{ $slugs := .LastPostsSlugs }}
+                    {{ $ids := .LastPostsIds }}
+
+                    {{range $i, $title := .LastPostsTitles}}
+                        <a href="/blog/{{index $ids $i}}-{{index $slugs $i}}">
+                            <div class="overflow-hidden">
+                                <img class="w-96 sm:w-5/6 object-cover h-60 sm:h-80" src="{{index $postimages $i}}" alt="Mountain">
+                                <div class=" sm:px-6 sm:py-4">
+                                    <div class="font-bold text-xl mb-2">{{ $title }}</div>
+                                    <p class="text-gray-200 text-base">{{index $synp  $i}}</p>
+                                </div>
+                            </div>
+                        </a>
+                    {{end}}
+                {{else}}
+ 
                 <!--Card 1-->
                 <div class=" overflow-hidden">
                     <img class="w-full object-fill" src="/public/images/mountain.jpg" alt="Mountain">
@@ -75,6 +99,8 @@
                     </div>
                 </div>
 
+                {{end}}
+
             </div>
             <div class="relative mb-3">
                 <a href="/blog">
@@ -86,7 +112,7 @@
         </section>
 
         <!-- SERVICES -->
-        <section class="my-2 px-12 pb-10 pt-2">
+        <section class="my-2 px-12 mt-10 pt-2">
             <h2 class="text-xl sm:text-2xl md:text-4xl  mukta_font mb-4">Services</h2>
             <style>
                 .service-num {
@@ -150,7 +176,7 @@
                     </p>
                 </div>
             </div>
-            <div class="relative">
+            <div class="relative pt-6 mb-20">
                 <a href="#contact"
                     class="absolute right-10 text-black mukta_font text-2xl hover:text-zinc-700 hover:text-3xl">
                     CONTACT US
