adding blog and pagination

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -38,7 +38,8 @@
                 Blog
             </h1>
             <p class="italic mt-2 sm:pl-2  sm:ml-8">
-                Posts about technology, programming languages and more, if you want to read more about Arthur or his ideas, check up his <a class="underline text-blue-600
+                Posts about technology, programming languages and more, if you want to read more about Arthur or his ideas, check up his 
+                <a class="underline text-blue-600
                 hover:text-zinc-700 
                 visited:text-zinc-400" href="https://afa7789.medium.com/">medium blog posts</a>. <br>
             </p>
