README upgrade with theme image and certain descriptions...

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -136,23 +136,11 @@
                         Development
                     </h3>
                     <p style="min-width: 180px; max-width: 330px;" class="italic">
-                        Development of newer features in a newer tech stack.
+                        Development on demand of features or projects in newer tech stack.
                         Your project with the most recent tech,
                         best practices, and conventions.
                     </p>
 
-                </div>
-                <!-- Migrations -->
-                <div>
-                    <p class="service-num">2</p>
-                    <h3 class="text-lg sm:text-xl md:text-2xl ">
-                        Migrations
-                    </h3>
-                    <p style="min-width: 180px; max-width: 330px;" class="italic">
-                        Help your team migrate from old code to newer ones.
-                        Maintaining the behavior of older features and their documentation.
-
-                    </p>
                 </div>
                 <!-- web3 -->
                 <div>
